syntax = "proto2";

import "pyatv/protocols/mrp/protobuf/ProtocolMessage.proto";
import "pyatv/protocols/mrp/protobuf/PlaybackQueueContext.proto";
import "pyatv/protocols/mrp/protobuf/PlayerPath.proto";

extend ProtocolMessage {
  optional PlaybackQueueRequestMessage playbackQueueRequestMessage = 37;
}

message PlaybackQueueRequestMessage {
  optional int32 location = 1;
  optional int32 length = 2;
  optional bool includeMetadata = 3;
  optional double artworkWidth = 4;
  optional double artworkHeight = 5;
  optional bool includeLyrics = 6;
  optional bool includeSections = 7;
  optional bool includeInfo = 8;
  optional bool includeLanguageOptions = 9;
  optional PlaybackQueueContext context = 10;
  optional string requestID = 11;
  repeated string contentItemIdentifiers = 12;
  optional bool returnContentItemAssetsInUserCompletion = 13;
  optional PlayerPath playerPath = 14;
  optional int32 cachingPolicy = 15;
  optional string label = 16;
  optional bool isLegacyNowPlayingInfoRequest = 17;
}
