syntax = "proto2";

import "pyatv/protocols/mrp/protobuf/ProtocolMessage.proto";

extend ProtocolMessage {
  optional SetVolumeMessage setVolumeMessage = 55;
}

message SetVolumeMessage {
  optional float volume = 1;
  optional string outputDeviceUID = 2;
}
